--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
         "barryvdh/laravel-debugbar": "~2.0",
         "nategood/httpful": "~0.2.19",
         "robclancy/presenter": "1.3.*",
-        "bugsnag/bugsnag-laravel": "1.*"
+        "bugsnag/bugsnag-laravel": "1.*",
+        "league/oauth1-client": "^1.5",
+        "league/oauth2-client": "^0.12.0",
+        "guzzlehttp/oauth-subscriber": "^0.2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.5",
