--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "bugsnag/bugsnag-laravel": "1.*",
         "league/oauth1-client": "^1.5",
         "league/oauth2-client": "^0.12.0",
-        "guzzlehttp/oauth-subscriber": "^0.2.0"
+        "guzzlehttp/oauth-subscriber": "^0.2.0",
+        "commerceguys/guzzle-oauth2-plugin": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.5",
