--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,8 @@
         "nategood/httpful": "~0.2.19",
         "robclancy/presenter": "1.3.*",
         "bugsnag/bugsnag-laravel": "1.*",
-        "league/oauth1-client": "^1.5",
-        "league/oauth2-client": "^0.12.0",
-        "guzzlehttp/oauth-subscriber": "^0.2.0",
-        "commerceguys/guzzle-oauth2-plugin": "~2.0"
+        "laravel/socialite": "^2.0",
+        "guzzlehttp/oauth-subscriber": "^0.2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.5",
