--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,9 @@ MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME=null
 
 BUGSNAG_API_KEY=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SERCET=
+
+BITBUCKET_CLIENT_ID=
+BITBUCKET_CLIENT_SERVICE=
