--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "robclancy/presenter": "1.3.*",
         "bugsnag/bugsnag-laravel": "1.*",
         "laravel/socialite": "^2.0",
-        "guzzlehttp/oauth-subscriber": "^0.2.0"
+        "guzzlehttp/oauth-subscriber": "^0.2.0",
+        "commerceguys/guzzle-oauth2-plugin": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.5",
